Added some basic functions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             font-family: 'Times New Roman', Times, serif;
         }
     </style>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+   
 </head>
 
 <body>
@@ -44,7 +44,7 @@
             the
             calorie and macronutrient goals you set.</p>
 
-        <p> The saying goes “with knowledge comes power.” Well, we’ve now given you the knowledge and power to craft
+        <p> The saying goes “with knowledge comes power.” Well, we have now given you the knowledge and power to craft
             your
             ideal physique.</p>
 
