Added event listener and fixed DOM get values

--- a/index.html
+++ b/index.html
@@ -52,33 +52,33 @@
     <div class="pic">
         <img src="assets/images/cooking.jpg" alt="Lady preparing vegtables">
     </div>
-
-    <form class="questions">
+<section>
+    <form id="form">
         <div>
             <label><strong>Gender:</strong></label>
             <br>
 
-            <input type="radio" id="male" name="gender" value="male" required="required">
+            <input type="radio" id="gender" name="gender" value="male" required="required">
             <label for="male">Male</label>
 
-            <input type="radio" id="female" name="gender" value="female" required="required">
+            <input type="radio" id="gender" name="gender" value="female" required="required">
             <label for="female">Female</label>
 
         </div>
         <br>
         <div>
             <label for="weight"><strong>Weight (KG):</strong></label>
-            <input type="number" id="weight" name="weight" value="weight" required>
+            <input type="text" id="weight" name="weight" required>
         </div>
         <br>
         <div>
             <label for="height"><strong>Height (CM):</strong></label>
-            <input type="number" id="height" name="weight" value="height" required>
+            <input type="text" id="height" name="height" required>
         </div>
         <br>
         <div>
             <label for="age"><strong>Age:</strong></label>
-            <input type="number" id="age" name="age" value="age" required>
+            <input type="text" id="age" name="age" required>
         </div>
 
         <br>
@@ -86,32 +86,32 @@
             <label><strong>Activity Level:</strong></label>
             <br>
 
-            <input type="radio" id="sedentary" name="activity-level" value="sedentary" required="required">
+            <input type="radio" id="activity-level" name="activity-level" value="sedentary" required="required">
             <label for="sedentary">Sedentary (little to no exercise + work a desk job)</label>
 
 
             <br>
 
 
-            <input type="radio" id="lightly-active" name="activity-level" value="lightly-active" required="required">
+            <input type="radio" id="activity-level" name="activity-level" value="lightly-active" required="required">
             <label for="lightly-active">Lightly Active (light exercise 1-3 days / week)</label>
 
 
             <br>
 
-            <input type="radio" id="moderately-active" name="activity-level" value="moderately-active" required="required">
+            <input type="radio" id="activity-level" name="activity-level" value="moderately-active" required="required">
             <label for="moderately-active">Moderately Active (moderate exercise 3-5 days / week)</label>
 
             <br>
 
 
-            <input type="radio" id="very-active" name="activity-level" value="very-active" required="required">
+            <input type="radio" id="activity-level" name="activity-level" value="very-active" required="required">
             <label for="very-active">Very Active (heavy exercise 6-7 days / week)</label>
 
             <br>
 
 
-            <input type="radio" id="extemely-active" name="activity-level" value="extemely-active" required="required">
+            <input type="radio" id="activity-level" name="activity-level" value="extemely-active" required="required">
             <label for="extemely-active">Extremely Active (very heavy exercise, hard labor job, training 2x /
                 day)</label>
 
@@ -121,18 +121,18 @@
             <label><strong>Goal:</strong></label>
             <br>
 
-            <input type="radio" id="loseOne" name="goal" value="loseOne" required="required">
+            <input type="radio" id="goal" name="goal" value="loseOne" required="required">
             <label for="loseOne">Weight Loss - 1 pound a week</label>
             
-            <input type="radio" id="loseTwo" name="goal" value="loseTwo" required="required">
+            <input type="radio" id="goal" name="goal" value="loseTwo" required="required">
             <label for="loseTwo">Weight Loss - 2 pounds a week</label>
 
 
-            <input type="radio" id="maintain" name="goal" value="maintain" required="required">
+            <input type="radio" id="goal" name="goal" value="maintain" required="required">
             <label for="maintain">Maintain Weight</label>
 
 
-            <input type="radio" id="gain" name="goal" value="gain" required="required">
+            <input type="radio" id="goal" name="goal" value="gain" required="required">
             <label for="gain">Weight Gain</label>
 
         </div>
@@ -144,7 +144,7 @@
         </div>
 
     </form>
-
+</section>
     <footer>
 
     </footer>
