Added Html to results page

--- a/results.html
+++ b/results.html
@@ -26,12 +26,39 @@
 
 <body>
     <h1>Health Helper</h1>
+    <h3>What is TDEE?</h3>
+    <p>Wondering what is TDEE? TDEE stands for Total Daily Energy Expenditure. It is the total number of calories you
+        burn in a given day. </p>
 
-<footer>
-    <p>Disclaimer: Health Helper is for informational purposes only. Consult a healthcare provider before making health decisions.</p>    
-</footer>
+    <h3>Basal Metabolic Rate (BMR)</h3>
+    <p>Basal metabolic rate refers to the number of calories your body burns each day to keep you alive. BMR does not
+        include physical activity, the process of digestion, or things like walking from one room to another.</p>
 
-<script src="assets/js/script.js"></script>
+    <p> Basically, BMR is the number of calories your body would expend in a 24 hour period if all you did was lay in
+        bed all day long. This is the absolute bare minimum of calories it takes to ensure your survival.</p>
+
+        <h3>What are Macros</h3>
+    <p>The idea behind the macro diet is pretty simple: Instead of staying under a calorie threshold, you focus on
+        getting a certain number (typically grams) of macronutrients—protein, carbohydrates, and fat—instead. Depending
+        on your goals, you can adjust the amounts of protein, carbohydrates, and fats you consume to slim down, build
+        muscle, or maintain your weight.</p>
+
+        <h3>For Example:</h3>
+        <p>
+            Carbohydrates: Healthy carbs typically contain lots of fiber, including whole grains, legumes, leafy greens, potatoes, and fruit.
+        </p>
+        <p>
+            Proteins: Good picks for healthy, lean proteins: chicken, turkey grass-fed beef, fatty fish (like salmon and mackerel), eggs, and plant-based options like beans and chickpeas.
+        </p>
+        <p>
+            Fats: Satiating, healthy fats include olive oil, avocado, nuts, and seeds.
+        </p>
+    <footer>
+        <p>Disclaimer: Health Helper is for informational purposes only. Consult a healthcare provider before making
+            health decisions.</p>
+    </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
