Fixed second if loop and commented out console logs

--- a/results.html
+++ b/results.html
@@ -10,21 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-    <style>
-        h1 {
-            font-family: "Courgette", sans-serif;
-        }
-
-        h2,
-        h3,
-        div {
-            font-family: 'Times New Roman', Times, serif;
-        }
-    </style>
-
+   
 </head>
 
 <body>
+    <main>
     <h1>Health Helper</h1>
     <h3>What is TDEE?</h3>
     <p>Wondering what is TDEE? TDEE stands for Total Daily Energy Expenditure. It is the total number of calories you
@@ -59,6 +49,7 @@
     </footer>
 
     <script src="assets/js/script.js"></script>
+</main>
 </body>
 
 </html>
