Got the page to redirect to results page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <section id="form-box">
             <h3>Take the Test and take the first step towards a healthier you!</h3>
-            <form id="form" method="POST">
+            <form id="form">
                 <div>
                     <label><strong>Gender:</strong></label>
                     <br>
