--- a/index.html
+++ b/index.html
@@ -82,34 +82,34 @@
                     <label><strong>Activity Level:</strong></label>
                     <br>
 
-                    <input type="radio" id="sedentary" name="activity-level" value="sedentary" required="required">
+                    <input type="radio" id="sedentary" name="activity" value="sedentary" required="required">
                     <label for="sedentary">Sedentary (little to no exercise + work a desk job)</label>
 
 
                     <br>
 
 
-                    <input type="radio" id="lightly-active" name="activity-level" value="lightly-active"
+                    <input type="radio" id="lightly-active" name="activity" value="lightly-active"
                         required="required">
                     <label for="lightly-active">Lightly Active (light exercise 1-3 days / week)</label>
 
 
                     <br>
 
-                    <input type="radio" id="moderately-active" name="activity-level" value="moderately-active"
+                    <input type="radio" id="moderately-active" name="activity" value="moderately-active"
                         required="required">
                     <label for="moderately-active">Moderately Active (moderate exercise 3-5 days / week)</label>
 
                     <br>
 
 
-                    <input type="radio" id="very-active" name="activity-level" value="very-active" required="required">
+                    <input type="radio" id="very-active" name="activity" value="very-active" required="required">
                     <label for="very-active">Very Active (heavy exercise 6-7 days / week)</label>
 
                     <br>
 
 
-                    <input type="radio" id="extemely-active" name="activity-level" value="extemely-active"
+                    <input type="radio" id="extemely-active" name="activity" value="extemely-active"
                         required="required">
                     <label for="extemely-active">Extremely Active (very heavy exercise, hard labor job, training 2x /
                         day)</label>
