--- a/results.html
+++ b/results.html
@@ -18,18 +18,28 @@
         <h1>Health Helper</h1>
 
         <h2>Your Results are in!</h2>
-
-        <div>Your TDEE:<span id="tdee"></span></div>
-        <div>Your BMR:<span id="bmr"></span></div>
-        <div>Your Calorie Need to meet your Goal:<span id="calories"></span></div>
+        <div class="results">
+            <div>Your TDEE:<span id="tdee"></span></div>
+            <div>Your BMR:<span id="bmr"></span></div>
+        </div>
+           <div class="results">
+             <div>Your Calorie Need to meet your Goal:<span id="calories"></span></div>
+           </div>
+           <img src="assets/images/tape-and-berries.jpg" alt="Picture of Berries and a measuring tape">
         <h2>Your Macros Broken down</h2>
-        <div>Calories in carbohydrates:<span id="carbsCal"></span></div>
-        <div>Grams in carbohydrates:<span id="carbGram"></span></div>
-        <div>Calories in fats:<span id="fatCal"></span></div>
-        <div>Grams in fats:<span id="fatGram"></span></div>
-        <div>Calories in protein:<span id="proteinCal"></span></div>
-        <div>Grams in protein:<span id="proteinGram"></span></div>
-
+        <div class="results">
+            <div>Calories in carbohydrates:<span id="carbsCal"></span></div>
+            <div>Grams in carbohydrates:<span id="carbGram"></span></div>
+        </div>
+        <div class="results">
+            <div>Calories in fats:<span id="fatCal"></span></div>
+            <div>Grams in fats:<span id="fatGram"></span></div>
+        </div>
+        <div class="results">
+            <div>Calories in protein:<span id="proteinCal"></span></div>
+            <div>Grams in protein:<span id="proteinGram"></span></div>
+        </div>
+<div class="text-box">
         <h3>What is TDEE?</h3>
         <p>Wondering what is TDEE? TDEE stands for Total Daily Energy Expenditure. It is the total number of calories
             you
@@ -64,6 +74,7 @@
         <p>
             Fats: Satiating, healthy fats include olive oil, avocado, nuts, and seeds.
         </p>
+    </div>
         <footer>
             <p>Disclaimer: Health Helper is for informational purposes only. Consult a healthcare provider before making
                 health decisions.</p>
